Fix feedback z-index.

--- a/app/assets/stylesheets/better_homepage/application.css.sass
+++ b/app/assets/stylesheets/better_homepage/application.css.sass
@@ -214,7 +214,7 @@ section#content
     background-color: white
     transition: all .4s linear
     opacity: 1
-    z-index: 2
+    z-index: 700
     &.hidden
       opacity: 0
       z-index: -1
